Add placeholder images on cards.

--- a/app/views/etusivus/index.html.erb
+++ b/app/views/etusivus/index.html.erb
@@ -68,6 +68,7 @@ body {
   flex-direction: row;
   justify-content: space-evenly;
   padding: 20px 0;
+  text-align: center;
 }
 
 .container > div {
@@ -100,11 +101,11 @@ body {
       <center>
     <div class="col-sm-6">
       <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/kuja.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
+       <a href="#" class="btn btn-primary">Open project</a>
      </div>
     </div>
   </div>
@@ -116,11 +117,11 @@ body {
     <center>
   <div class="col-sm-6">
 <div class="card">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="/kuja.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">Open project</a>
   </div>
 </div>
 </div>
@@ -130,11 +131,11 @@ body {
     <center>
   <div class="col-sm-6">
 <div class="card">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="/kuja.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">Open project</a>
   </div>
 </div>
 </div>
@@ -147,11 +148,11 @@ body {
       <center>
     <div class="col-sm-6">
       <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/kuja.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-       <a href="#" class="btn btn-primary">Go somewhere</a>
+       <a href="#" class="btn btn-primary">Open project</a>
      </div>
     </div>
   </div>
@@ -163,11 +164,11 @@ body {
     <center>
   <div class="col-sm-6">
 <div class="card">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="/kuja.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">Open project</a>
   </div>
 </div>
 </div>
@@ -177,11 +178,11 @@ body {
     <center>
   <div class="col-sm-6">
 <div class="card">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="/kuja.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">Open project</a>
   </div>
 </div>
 </div>
