Experiment with card button colours.

--- a/app/views/etusivus/index.html.erb
+++ b/app/views/etusivus/index.html.erb
@@ -105,7 +105,8 @@ body {
         <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-       <a href="#" class="btn btn-primary">Open project</a>
+      <!-- <a href="#" class="btn btn-info">Open project</a> -->
+      <button type="button" class="btn btn-outline-info">Open project</button>
      </div>
     </div>
   </div>
@@ -121,7 +122,7 @@ body {
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Open project</a>
+    <button type="button" class="btn btn-outline-info">Open project</button>
   </div>
 </div>
 </div>
@@ -135,7 +136,7 @@ body {
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Open project</a>
+    <button type="button" class="btn btn-outline-info">Open project</button>
   </div>
 </div>
 </div>
@@ -152,7 +153,7 @@ body {
         <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-       <a href="#" class="btn btn-primary">Open project</a>
+       <a href="#" class="btn btn-info">Open project</a>
      </div>
     </div>
   </div>
@@ -168,7 +169,7 @@ body {
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Open project</a>
+    <a href="#" class="btn btn-info">Open project</a>
   </div>
 </div>
 </div>
@@ -182,7 +183,7 @@ body {
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Open project</a>
+    <a href="#" class="btn btn-info">Open project</a>
   </div>
 </div>
 </div>
