--- a/app/views/etusivus/index.html.erb
+++ b/app/views/etusivus/index.html.erb
@@ -100,13 +100,13 @@ body {
     <div class="left">
       <center>
     <div class="col-sm-6">
-      <div class="card">
+      <div class="card bg-info">
       <img src="/kuja.jpeg" class="card-img-top" alt="...">
         <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <!-- <a href="#" class="btn btn-info">Open project</a> -->
-      <button type="button" class="btn btn-outline-info">Open project</button>
+      <button type="button" class="btn btn-light">Open project</button>
      </div>
     </div>
   </div>
