--- a/app/views/etusivus/index.html.erb
+++ b/app/views/etusivus/index.html.erb
@@ -81,7 +81,7 @@ body {
 
 <body>
 <div class="header">
-  <a href="#default" class="logo">Heli Sivunen <br> Front-end developer</a>
+  <a href="#default" class="logo">Heli Sivunen <br> Full Stack Developer</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
     <a href="#contact">Contact</a>
